# densol

./: .gitignore  Anchor.toml  BLOG.md  CLAUDE.md  Cargo.toml  FINDINGS.md  LICENSE-APACHE  Makefile  README.md  ROADMAP.md  densol_pitch.pptx  package.json
app/: bun.lockb  index.html  tailwind.config.ts
app/public/: robots.txt  sitemap.xml
app/src/: App.tsx  index.css
app/src/components/: BenchmarksSection.tsx  CalculatorSection.tsx  DocsHeader.tsx  FeaturesSection.tsx  FooterSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  QuickStartSection.tsx  UsageSection.tsx
app/src/components/docs/: DocsComponents.tsx  DocsSidebar.tsx
app/src/pages/: Index.tsx
app/src/pages/docs/: DocsApi.tsx  DocsBenchmarks.tsx  DocsCalculator.tsx  DocsComparison.tsx  DocsConfiguration.tsx  DocsExamples.tsx  DocsInstallation.tsx  DocsIntroduction.tsx  DocsLayout.tsx  DocsQuickStart.tsx  DocsTroubleshooting.tsx
benchmark/: RESULTS.md
benchmark/drift/: benchmark.ts  discussion_draft.md  scan.ts
benchmark/kamino/: benchmark.ts  discussion_draft.md  scan.ts
benchmark/marginfi/: benchmark.ts  discussion_draft.md  scan.ts
benchmark/meteora/: benchmark.ts  discussion_draft.md  scan.ts
benchmark/openbook/: benchmark.ts  scan.ts
benchmark/orca/: benchmark.ts  discussion_draft.md  scan.ts
benchmark/raydium/: benchmark.ts  discussion_draft.md  scan.ts
crates/densol/: CHANGELOG.md  Cargo.toml  RELEASING.md
crates/densol-derive/: Cargo.toml
crates/densol-derive/src/: lib.rs
crates/densol/examples/: compare_file.rs  huff_sizes.rs
crates/densol/src/: chunked_lz4_impl.rs  deflate_impl.rs  identity.rs  lib.rs  lz4_huffman_impl.rs  lz4_impl.rs  rle_impl.rs
crates/densol/tests/: scenarios.rs
demo/: account.json  account.local.json  after.rs  before.rs  run.ts
programs/compress_bench/: Cargo.toml
programs/compress_bench/src/: lib.rs
results/: benchmark-identity.json  benchmark-lz4.json  benchmark-rle.json  benchmark.json  real_world.md
tests/: compress_bench.ts  limit_probe.ts
tools/: bench-all.sh  drift_scan.ts  drift_scan_results.json  gen-charts.js
tools/compress_tool/: Cargo.toml
tools/compress_tool/src/: main.rs
