[package]
name = "densol-derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Derive macro for densol: #[derive(Compress)]"
license = "Apache-2.0"
repository = "https://github.com/ZygmuntJakub/densol"
homepage = "https://densol.dev"
readme = "../../README.md"
keywords = ["solana", "compression", "anchor", "derive", "macro"]
categories = ["compression", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["derive"] }
