[package]
name = "densol"
version = "0.1.0"
edition = "2021"
description = "Compression strategy trait + SBF-compatible implementations for Solana programs"
license = "MIT OR Apache-2.0"

[features]
default      = ["discriminant"]
discriminant = []
lz4          = ["dep:lz4_flex"]
identity     = []
deflate      = ["dep:miniz_oxide"]
rle          = []
std          = []

[dependencies]
lz4_flex     = { version = "0.11", default-features = false, optional = true }
miniz_oxide  = { version = "0.7",  default-features = false, features = ["with-alloc"], optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
