[package]
name = "densol"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "Compression strategy trait + SBF-compatible implementations for Solana programs"
license = "Apache-2.0"
repository = "https://github.com/ZygmuntJakub/densol"
homepage = "https://densol.dev"
documentation = "https://docs.rs/densol"
readme = "../../README.md"
keywords = ["solana", "compression", "lz4", "sbf", "anchor"]
categories = ["compression", "no-std", "wasm"]

[features]
default      = ["lz4", "discriminant", "derive"]
discriminant = []
lz4          = ["dep:lz4_flex"]
chunked_lz4  = ["lz4"]
lz4_huffman  = ["lz4"]
std          = []
derive       = ["dep:densol-derive"]

[dependencies]
lz4_flex      = { version = "0.11.6", default-features = false, optional = true }
densol-derive = { version = "0.1", path = "../densol-derive", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
