[package]
name = "compress_bench"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "compress_bench"

[features]
default      = ["lz4", "discriminant", "chunked_lz4"]
lz4          = ["densol/lz4"]
discriminant = ["densol/discriminant"]
chunked_lz4  = ["densol/chunked_lz4"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang         = "0.32.1"
densol = { path = "../../crates/densol", default-features = false, features = ["derive"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
